--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,74 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+p{
+    margin: 0;
+}
+
+
+.ah-container{
+    border: 1px solid black;
+    width: 80%;
+    height: 700px;
+    margin: -75px auto 0;
+    background-color: white;
+}
+
+.bg-success{
+    height: 100px;
+}
+
+.chats{
+    width: 500px;
+    border: 1px solid black;
+    height: 100%;
+}
+
+.user{
+    height: 50px;
+    background-color: #eaeaea;
+    padding: 7px 20px 7px 7px;
+} 
+
+.message{
+    width: 100%;
+    height: 100%;
+    border: 1px solid black; 
+    background-image: url('../img/mine.jpg');   
+}
+
+.write-message{
+    height: 60px;
+    background-color: #f3eeea;
+}
+
+.write-message i{
+    font-size: 1.5rem;
+    color: #717777;
+}
+
+.message-area{
+    height: calc(100% - 110px);
+    overflow-y: auto;
+}
+
+img{
+    height: 100%;
+    width: 100%;
+}
+
+i{
+    color: #b1b1b1;
+    cursor: pointer;
+    transition: opacity 0.5s;
+}
+
+i:hover{
+    opacity: 0.8;
+}
+
+
+.ah-small{
+    font-size: 0.65rem;
+}
