--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,14 @@
     box-sizing: border-box;
 }
 
+body{
+    opacity: 0.8;
+}
+
+.ah-container{
+    opacity: 1;
+}
+
 p{
     margin: 0;
 }
@@ -23,6 +31,8 @@ p{
     height: 100px;
 }
 
+/* Class Chat */
+
 .chats{
     width: 500px;
     border: 1px solid black;
@@ -33,8 +43,41 @@ p{
     height: 50px;
     background-color: #eaeaea;
     padding: 7px 20px 7px 7px;
-} 
+}
 
+.user img{
+    transition: opacity 0.5s;
+}
+
+.user img:hover{
+    opacity: 0.7;
+}
+
+.notification{
+    background-color: #8edafc;
+    height: 70px;    
+}
+
+.notification i{
+    color: #8edafc;
+}
+
+.search{
+    background-color: #eaeaea;
+    height: 40px;
+    border: none;
+}
+
+.chat-friends{
+    overflow-y: auto;
+    height: calc(100% - 160px);
+    border: 1px solid black;
+}
+
+.friend{
+    height: 75px;
+}
+/* class message */
 .message{
     width: 100%;
     height: 100%;
@@ -59,17 +102,19 @@ p{
 
 img{
     height: 100%;
-    width: 100%;
+    border-radius: 50%;
 }
 
 i{
     color: #b1b1b1;
     cursor: pointer;
-    transition: opacity 0.5s;
+    transition: opacity 0.5s, background-color 0.5s;   
+    padding: 10px; 
+    border-radius: 10px;
 }
 
-i:hover{
-    opacity: 0.8;
+.user i:hover, .write-message i:hover{
+    background-color: white;
 }
 
 
