--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,6 @@ p {
 
 
 .ah-container {
-    border: 1px solid black;
     width: 80%;
     height: 700px;
     margin: -75px auto 0;
@@ -35,7 +34,6 @@ p {
 
 .chats {
     width: 35%;
-    border: 1px solid black;
     height: 100%;
 }
 
@@ -71,7 +69,6 @@ p {
 .chat-friends {
     overflow-y: auto;
     height: calc(100% - 160px);
-    border: 1px solid black;
     transition: width 1s;
 }
 
@@ -80,8 +77,8 @@ p {
     transition: width 1s;
 }
 
-.chat-friends:hover::-webkit-scrollbar {
-    width: 5px;
+:hover::-webkit-scrollbar {
+    width: 7px;
 }
 
 ::-webkit-scrollbar-track {
@@ -105,7 +102,6 @@ p {
 .message {
     width: 65%;
     height: 100%;
-    border: 1px solid black;
     background-image: url('../img/mine.jpg');
 }
 
@@ -151,12 +147,12 @@ i {
     font-size: 0.65rem;
 }
 
-.send {
+.sent {
     background-color: #d8fbd2;
     width: fit-content;
 }
 
-.recived {
+.received {
     background-color: #fdfdfd;
     width: fit-content;
 }
