--- a/css/style.css
+++ b/css/style.css
@@ -69,12 +69,10 @@ p {
 .chat-friends {
     overflow-y: auto;
     height: calc(100% - 160px);
-    transition: width 1s;
 }
 
 ::-webkit-scrollbar {
     width: 3px;
-    transition: width 1s;
 }
 
 :hover::-webkit-scrollbar {
@@ -122,6 +120,7 @@ p {
 .message-area {
     height: calc(100% - 110px);
     overflow-y: auto;
+    width: 100%;
 }
 
 img {
@@ -150,6 +149,8 @@ i {
 .sent {
     background-color: #d8fbd2;
     width: fit-content;
+    margin-left: auto;
+    
 }
 
 .received {
