--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,15 @@ p {
 }
 
 .friend:hover {
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.05);
+}
+
+.selected{
+    background-color: rgba(0, 0, 0, 0.15);;
+}
+
+.selected:hover{
+    background-color: rgba(0, 0, 0, 0.2);;
 }
 
 /* class message */
